--- a/responsive.css
+++ b/responsive.css
@@ -7,12 +7,13 @@
     }
     .container {
         grid-template-columns: repeat(2, 1fr);
+        align-items: center;
     }
     .container > div:nth-child(n+4) {
         display:block;
     }
     .container > div:nth-child(10) {
-        grid-column: auto;
+        grid-column: 1/3;
         grid-row: auto;
         order:-1;
     }
